clang/test/BSC/Negative/Method/Struct/struct_function_call/struct_function_call.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
    int a;
};
int struct Foo::getA() {
    return 1;
}

int main() {
    struct Foo foo;
    struct Foo *f = &foo;
    foo.getA(); // expected-error {{no instance member named 'getA' in 'struct Foo'; did you mean to use '::' instead of '.'?}}
                // expected-note@-1 {{found the following member function 'getA' which doesn't have a 'this' parameter}}
    f->getA(); // expected-error {{no instance member named 'getA' in 'struct Foo'; did you mean to use '::' instead of '->'?}}
               // expected-note@-1 {{found the following member function 'getA' which doesn't have a 'this' parameter}}
    return 0;
}